Fix responsiveness of site on mobile

--- a/style/custom.css
+++ b/style/custom.css
@@ -108,6 +108,33 @@ a:focus {
 	margin:0px auto;
 }
 
+.logininfo {
+	margin-top: 5px;
+}
+
+#page-header .logo div {
+	float: left;
+	width: 357px;
+	max-width: 100%;
+	height: 75px;
+
+}
+
+#page-header .logo a {
+	width: 100%;
+	height: 89px;
+	display: block;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+#page-header .logo-div {
+	background-repeat: no-repeat;
+	float: left;
+	width: 380px;
+	height: 75px;
+}
+
 .lalign #logo {
 	float: left;
 }
@@ -167,7 +194,7 @@ a:focus {
 }
 
 .footer-share {
-    margin-top: 30px;
+    margin-top: 5px;
     text-align: center;
 }
 
@@ -194,6 +221,14 @@ a:focus {
     list-style: none outside none;
     margin: 0;
     padding: 0;
+}
+
+#page-footer .logo {
+	height: 150px;
+	display: block;
+	background-repeat: no-repeat;
+	background-position: center top;
+	margin-top: 4px;
 }
 
 .footer-share .fb, .footer-share .twitter, .footer-share .gplus, .footer-share .linkedin, .footer-share .reddit, .footer-share .contact, .footer-share .share-this {
@@ -546,7 +581,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 	.navbar .btn-navbar {
     display: block;
     float: none;
-    margin: 0 auto;
+    margin: 60px auto 0px;
     width: 20px;
 	}
 	
